<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".poupUP">

    <View
        android:id="@+id/pou_up"
        android:layout_width="369dp"
        android:layout_height="105dp"
        android:background="#97AA98"
        android:paddingVertical="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="294dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/pou_up"
        app:layout_constraintEnd_toEndOf="@+id/pou_up"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/pou_up">

        <Button
            android:id="@+id/but_sim"
            style="@style/Butao_default_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/botão_sim"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/but_nao"
            style="@style/Butao_default_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#850606"
            android:text="@string/botão_nao"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_regis_confirm"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/pou_up"
        app:layout_constraintStart_toStartOf="@+id/pou_up"
        app:layout_constraintTop_toTopOf="@+id/pou_up"
        app:layout_constraintVertical_bias="0.571" />

</androidx.constraintlayout.widget.ConstraintLayout>